--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,5 @@
-
+title: Synapse X
+#logo
+description: Synapse X Remade By eternxlz Download the executer here!
+#show_downloads: true
+theme: jekyll-theme-minimal
